Update auth-token gem and fix horizental scrollbar.

--- a/web-client/app/styles/main.scss
+++ b/web-client/app/styles/main.scss
@@ -21,6 +21,7 @@ html {
 
 body {
   font-size: 14px;
+  overflow-x: hidden;
 
   &.article-with-cover {
     .logo, .article-meta {
